# simpleFilter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Build.yml  cmake-multi-platform.yml
include/: CLI.hh  FileReader.hh  FileWriter.hh  Filter.hh  Player.hh
include/CLI/: Arguments.hh  CLI.hh
src/: CMakeLists.txt
src/CLI/: Arguments.cc  CLI.cc  CMakeLists.txt
src/FileReader/: CMakeLists.txt  FileReader.cc
src/FileWriter/: CMakeLists.txt  FileWriter.cc
src/Filter/: CMakeLists.txt  Filter.cc
src/Main/: Main.cc
src/Player/: CMakeLists.txt  Player.cc
